--- a/css/contact.css
+++ b/css/contact.css
@@ -57,83 +57,6 @@ html{
     box-sizing: inherit;
     }
 
-    /* apply wrap */
-.wrapper{
-max-width: 1200px;
-margin:0 auto;
-}
-
-/* set up root color */
-:root{
- --primary-color:#8F338F;
- --secondary-color:#82C14E;
- --third-color:#FFF3E5;
- --fourth-color:#EDDFED;
-}
-
-/* set up logo size and format */
-header > img {
-    max-width: 450px;
-    max-height: 450px;
-    margin-left: 400px;
-    margin-bottom: 10px;
-    }
-/* set up nav bar */
-ul li{
-    display:inline;
-    font-weight: bold;
-    font-size: 30px;
-}
-
-ul li:nth-child(1){
-    padding-left: -20px;
-    margin:80px;
-}
-
-ul li:nth-child(2){
-    padding-left: 80px;
-    margin:100px;
-}
-
-ul li:nth-child(3){
-    padding-left: 125px;
-    margin:100px;
-}
-
-/* set up animation for nav */
-nav a,
-nav a:link,
-nav a:visited{
-  color:var(--primary-color);
-  display: inline;
-  text-decoration: none;
-}
-
-/* LoVe HAte */
-nav a,
-nav a:link,
-nav a:visited{
-  display: inline-block;
-  text-decoration: none;
-  transition: transform 0.5s;
-}
-
-nav a:hover, 
-nav a:focus{
-  text-decoration: underline;
-  transform: scale(1.5);
-}
-
-nav a:active{
-  transform: scale(1.4) translateX(15px);
-}
-
-/* set up header format */
-.header{
-    background-color:var(--fourth-color);
-    padding: 40px;
-    padding-bottom: 20px;
-}
 
 /* body set up */
 body{
@@ -141,139 +64,313 @@ body{
   font-size: 30px;
 }
 
+/* apply wrap */
+.wrapper{
+max-width: 1200px;
+margin:0 auto;
+}
+  
+/* set up root color */
+:root{
+--primary-color:#8F338F;
+--secondary-color:#82C14E;
+--third-color:#FFF3E5;
+--fourth-color:#EDDFED;
+}
+  
+/* set up logo size and format */
+header > img {
+max-width: 700px;
+max-height: 700px;
+margin-bottom: 10px;
+padding-left:300px;
+}
+  
+/* set up nav bar */
+ul li{
+display:inline;
+font-weight: bold;
+font-size: 30px;
+}
+  
+ul li:nth-child(1){
+padding-left: 10px;
+margin:80px;
+}
+  
+ul li:nth-child(2){
+padding-left: 10px;
+margin:80px;
+}
+  
+ul li:nth-child(3){
+padding-left: 80x;
+margin:80px;
+}
+  
+/* set up animation for nav */
+nav a,
+nav a:link,
+nav a:visited{
+color:var(--primary-color);
+display: inline;
+text-decoration: none;
+}
+  
+/* LoVe HAte */
+nav a,
+nav a:link,
+nav a:visited{
+display: inline-block;
+text-decoration: none;
+transition: transform 0.5s;
+}
+  
+nav a:hover, 
+nav a:focus{
+text-decoration: underline;
+transform: scale(1.5);
+}
+  
+nav a:active{
+transform: scale(1.4) translateX(15px);
+}
+  
+/* set up header format */
+.header{
+background-color:var(--fourth-color);
+padding: 40px;
+padding-bottom: 20px;
+}
+
 h1{
-  font-size: 100px;
-  font-weight: bold;
-  color:var(--primary-color);
-  display:flex;
-  justify-content: center;
+font-size: 100px;
+font-weight: bold;
+color:var(--primary-color);
+display:flex;
+justify-content: center;
+margin-bottom:-50px;
 }
 
 h2{
-  font-size: 40px;
-  font-weight: bold;
-  color:var(--primary-color);
-  margin-top: 20px;
-  margin-bottom: 20px;
-  padding-left:1px;
+font-size: 50px;
+font-weight: bold;
+color:var(--primary-color);
+margin-top: 10px;
+margin-bottom: 10px;
+padding-left: 20px;
+padding-top: 50px;
+padding-bottom: 20px;
+}
+
+
+form{
+padding-bottom: 10px;
+padding-left: 15px;
+margin:10px;
 }
 
 #name,
-#email{
-  width: 95%;
+#email {
+  width: 100%;
   height:50px;
   padding-bottom: 30px;
-
 }
 
 #message{
-  width:95%;
-  height:150px;
-  padding-top:100px;
-  padding-bottom: 30px;
-  padding-bottom: 30px;
-
+width:100%;
+height:200px;
 }
 
 button{
-  background-color:var(--primary-color);
-  color: var(--secondary-color);
-  font-size: 30px;
-  padding: 10px;
-  padding-bottom: 15px;
-  margin-bottom: 15px;
-  margin-top: 15px;
+background-color:var(--primary-color);
+color: var(--secondary-color);
+font-size: 30px;
+padding: 10px;
+padding-bottom: 15px;
+margin-bottom: 15px;
+margin-top: 15px;
 }
 
-button:hover, 
-button:focus{
-  text-decoration:underline;
-  transform: scale(1.5);
-}
-
-.contact-us{
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-}
-
-.location{
-  grid-column: 2 / 2;
-  grid-row: 1 / 2;
-  padding-right:20px;
+iframe{
+width:100%;
+height: 400px;
+margin-bottom: 40px;
 }
 
 .main{
   background-color: var(--third-color);
-  padding-top: 30px;
-  padding-bottom: 50px;
 }
-
-.contact-us{
-  padding-left:20px;
-}
-
 /* set up footer style */
 .footer{
-  background-color: var(--fourth-color);
-  display:grid;
-  font-size: 20px;
-  color:var(--primary-color);
-  margin-top:-20px;
-  padding: 20px;
-  grid-template-columns: 0.03fr 0.8fr 0.8fr 0.8fr 0.8fr ;
-  grid-template-rows: 0.8fr 0.8fr 0.8fr 0.8fr 0.8fr;
-  
+background-color: var(--fourth-color);
+display:grid;
+font-size: 20px;
+color:var(--primary-color);
+margin-top:-20px;
+padding: 20px;
+grid-template-columns: 0.03fr 0.8fr 0.8fr 0.8fr 0.8fr ;
+grid-template-rows: 0.8fr 0.8fr 0.8fr 0.8fr 0.8fr;
 }
 
 .footer > p:nth-child(1){
-  grid-column: 2 / 5;
-  grid-row: 1 / 5;
+grid-column: 2 / 5;
+grid-row: 1 / 5;
 }
 
 .footer > p:nth-child(2){
-  grid-column: 3 / 4;
-  grid-row: 1 / 4;
+grid-column: 3 / 4;
+grid-row: 1 / 4;
 }
 
 .footer > p:nth-child(3){
-  grid-column: 3 / 5;
-  grid-row: 3/4;
+grid-column: 3 / 5;
+grid-row: 3/4;
 }
 
 .footer > p:nth-child(4){
-  grid-column: 4 / 5;
-  grid-row: 1 / 4;
+grid-column: 4 / 5;
+grid-row: 1 / 4;
 }
 
 .footer > p:nth-child(5){
-  grid-column: 4 / 5;
-  grid-row: 3/4
+grid-column: 4 / 5;
+grid-row: 3/4
 }
 
 .footer > p:nth-child(6){
-  grid-column: 5/5;
-  grid-row: 1 / 5;
+grid-column: 5/5;
+grid-row: 1 / 5;
 }
 
 /* set up two social media pictures style in footer */
 img[src="images/facebook.png"]{
- grid-column: 5/5;
- grid-row: 2 / 4;
- width: 35px;
- margin-top: 20px;
+grid-column: 5/5;
+grid-row: 2 / 4;
+width: 35px;
+margin-top: 20px;
 }
 
 img[src="images/tiktok.png"]{
-  grid-column: 5/7;
-  grid-row: 3/5;
-  width: 30px;
-  margin-left:50px;
-  margin-top:-6px;
+grid-column: 5/7;
+grid-row: 3/5;
+width: 30px;
+margin-left:50px;
+margin-top:-6px;
 }
 
+/* media quiry: all elements go into a single column so I will use flex */
+@media screen and (min-width: 1200px){      
 
+  
+nav ul{
+display: flex;
+background-color: white;
+margin:10px;
+padding:-10px;
+display:flex;
+flex-direction:column;
+}
+  
+/* nav size format adjustment */
+nav a,
+nav a:link,
+nav a:visited {
+border-style:solid;
+border-width:0.3px;
+}
+  
+  /* header adjustment */
+header{
+padding-bottom: 500px;
+margin-bottom: -100px;
+}
+  
+ul li{
+font-weight: bold;
+font-size: 28px;
+}
+  
+ul li:nth-child(1){
+padding-left: 10px;
+margin:80px;
+margin-top:15px;
+padding-left: -20px;
+margin-left:15px;
+}
+  
+ul li:nth-child(2){
+padding-left: 10px;
+margin:80px;
+padding-top: 10px;
+margin-top:-60px;
+margin-left:15px;
+}
+  
+ul li:nth-child(3){
+padding-left: 10px;
+margin:80px;
+padding-top: 15px;
+margin-top:-60px;
+margin-left:15px;
+}
+  
+/* logo adjustment */
+header > img {
+padding-left:0px;
+}
 
+#name,
+#email{
+width: 100%;
+height:50px;
+padding-bottom: 30px;
+}
 
+#message{
+width:100%;
+height:150px;
+padding-top:100px;
+padding-bottom: 30px;
+padding-bottom: 30px;
+}
+
+button{
+background-color:var(--primary-color);
+color: var(--secondary-color);
+font-size: 30px;
+padding: 10px;
+padding-bottom: 15px;
+margin-bottom: 15px;
+margin-top: 15px;
+}
+
+button:hover, 
+button:focus{
+text-decoration:underline;
+transform: scale(1.5);
+}
+
+.contact-us{
+display: grid;
+grid-template-columns: 1fr 1fr;
+}
+
+.location{
+grid-column: 2 / 2;
+grid-row: 1 / 2;
+padding-right:20px;
+}
+
+.main{
+background-color: var(--third-color);
+padding-top: 30px;
+padding-bottom: 50px;
+}
+
+.contact-us{
+padding-left:20px;
+}
 
 
 
