--- a/css/main.css
+++ b/css/main.css
@@ -3,301 +3,459 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
 }
+
 body {
-	line-height: 1;
+    line-height: 1;
 }
-ol, ul {
-	list-style: none;
+
+ol,
+ul {
+    list-style: none;
 }
-blockquote, q {
-	quotes: none;
+
+blockquote,
+q {
+    quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
 }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 
-html{
+html {
     box-sizing: border-box;
-    }
-    *,
-    *:before,
-    *:after{
+}
+
+*,
+*:before,
+*:after {
     box-sizing: inherit;
-    }
+}
 
 /* body set up */
-body{
-    font-family:Arial, Helvetica, sans-serif;
+body {
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
-  }
-  
+}
+
 /* apply wrap */
-.wrapper{
-max-width: 1200px;
-margin:0 auto;
+.wrapper {
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 /* set up root color */
-:root{
- --primary-color:#8F338F;
- --secondary-color:#82C14E;
- --third-color:#FFF3E5;
- --fourth-color:#EDDFED;
+:root {
+    --primary-color: #8F338F;
+    --secondary-color: #82C14E;
+    --third-color: #FFF3E5;
+    --fourth-color: #EDDFED;
 }
 
 /* set up logo size and format */
-header > img {
-    max-width: 450px;
-    max-height: 450px;
-    margin-left: 400px;
+header>img {
+    max-width: 700px;
+    max-height: 700px;
     margin-bottom: 10px;
-    }
+    padding-left: 300px;
+}
+
 /* set up nav bar */
-ul li{
-    display:inline;
+ul li {
+    display: inline;
     font-weight: bold;
     font-size: 30px;
 }
 
-ul li:nth-child(1){
-    padding-left: -20px;
-    margin:80px;
+ul li:nth-child(1) {
+    padding-left: 10px;
+    margin: 80px;
 }
 
-ul li:nth-child(2){
-    padding-left: 80px;
-    margin:100px;
+ul li:nth-child(2) {
+    padding-left: 10px;
+    margin: 80px;
 }
 
-ul li:nth-child(3){
-    padding-left: 125px;
-    margin:100px;
+ul li:nth-child(3) {
+    padding-left: 80x;
+    margin: 80px;
 }
 
 /* set up animation for nav */
 nav a,
 nav a:link,
-nav a:visited{
-  color:var(--primary-color);
-  display: inline;
-  text-decoration: none;
+nav a:visited {
+    color: var(--primary-color);
+    display: inline;
+    text-decoration: none;
 }
 
 /* LoVe HAte */
 nav a,
 nav a:link,
-nav a:visited{
-  display: inline-block;
-  text-decoration: none;
-  transition: transform 0.5s;
+nav a:visited {
+    display: inline-block;
+    text-decoration: none;
+    transition: transform 0.5s;
 }
 
-nav a:hover, 
-nav a:focus{
-  text-decoration: underline;
-  transform: scale(1.5);
+nav a:hover,
+nav a:focus {
+    text-decoration: underline;
+    transform: scale(1.5);
 }
 
-nav a:active{
-  transform: scale(1.4) translateX(15px);
+nav a:active {
+    transform: scale(1.4) translateX(15px);
 }
 
 /* set up header format */
-.header{
-    background-color:var(--fourth-color);
+.header {
+    background-color: var(--fourth-color);
     padding: 40px;
     padding-bottom: 20px;
 }
 
-.brand-story{
-    background-color:var(--third-color);
+.brand-story {
+    background-color: var(--third-color);
     padding-bottom: 2px;
-    padding-top:20px;
+    padding-top: 20px;
 }
 
 /* set up h1 format */
-h1{
+h1 {
     font-size: 100px;
     font-weight: bold;
-    color:var(--primary-color);
-    display:flex;
+    color: var(--primary-color);
+    display: flex;
     justify-content: center;
 }
 
 /* set up parapraph style in h1 */
-h1+p{
+h1+p {
     font-size: 50px;
-    color:var(--secondary-color);
+    color: var(--secondary-color);
     margin: 20px;
-    padding-bottom:25px;
+    padding-bottom: 25px;
 }
 
 /* set up h2 format */
-h2{
-   font-size:90px;
-   color:var(--primary-color);
-   font-weight:bold;
-   display:flex;
-   justify-content: center;
+h2 {
+    font-size: 90px;
+    color: var(--primary-color);
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
 }
 
 /* set up pictures format under h2 */
-img[src="images/item1.png"]{
-    height: 350px;
-    width: 350px;
-    margin-top: 30px;
-    margin-left: 200px;
+
+.mango-pic {
+    margin-left: auto;
+    margin-right: auto;
 }
 
-img[src="images/item2.png"]{
-    height: 340px;
-    width: 340px;
-    margin-top: 30px;
-    margin-left: 90px;
+.flex-container {
+    display: flex;
+    flex-direction: column;
+    padding: 50px;
 }
 
 /* set up button format */
-button{
-    display:inline-block;
-    color:var(--secondary-color);
+button {
+    display: inline-block;
+    color: var(--secondary-color);
     border: solid 3px;
     margin: 30px;
-    padding:10px;
-    margin-top: 20px;
+    padding: 10px;
+    margin-top: 30px;
     background-color: transparent;
     font-size: 20px;
 }
 
-button[class="mango"]{
-    margin-left: 280px;
+button[class="mango"] {
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-button[class="resberry"]{
-margin-left: 220px;
+button[class="resberry"] {
+    margin-left: 350px;
+    margin-top: -100px;
+    padding-top: 0px;
+    padding-right: 20px;
 }
+
 
 /* set up button animation style */
 @keyframes button {
-    0%{
-      transform: scale(0.5) translate(0,0);
+    0% {
+        transform: scale(0.5) translate(0, 0);
     }
-    100%{
-      transform: scale(1) translate(3px,3px);
+
+    100% {
+        transform: scale(1) translate(3px, 3px);
     }
 }
 
-button{
+button {
     animation: button 0.8s infinite;
 }
 
-.popular-mood{
-    background-color:var(--third-color);
+.popular-mood {
+    background-color: var(--third-color);
     margin-bottom: 20px;
 }
 
 /* set up footer style */
-.footer{
+.footer {
     background-color: var(--fourth-color);
-    display:grid;
+    display: grid;
     font-size: 20px;
-    color:var(--primary-color);
-    margin-top:-20px;
+    color: var(--primary-color);
+    margin-top: -20px;
     padding: 20px;
-    grid-template-columns: 0.03fr 0.8fr 0.8fr 0.8fr 0.8fr ;
+    grid-template-columns: 0.03fr 0.8fr 0.8fr 0.8fr 0.8fr;
     grid-template-rows: 0.8fr 0.8fr 0.8fr 0.8fr 0.8fr;
-    
+
 }
 
-.footer > p:nth-child(1){
+.footer>p:nth-child(1) {
     grid-column: 2 / 5;
     grid-row: 1 / 5;
 }
 
-.footer > p:nth-child(2){
+.footer>p:nth-child(2) {
     grid-column: 3 / 4;
     grid-row: 1 / 4;
 }
 
-.footer > p:nth-child(3){
+.footer>p:nth-child(3) {
     grid-column: 3 / 5;
     grid-row: 3/4;
 }
 
-.footer > p:nth-child(4){
+.footer>p:nth-child(4) {
     grid-column: 4 / 5;
     grid-row: 1 / 4;
 }
 
-.footer > p:nth-child(5){
+.footer>p:nth-child(5) {
     grid-column: 4 / 5;
     grid-row: 3/4
 }
 
-.footer > p:nth-child(6){
+.footer>p:nth-child(6) {
     grid-column: 5/5;
     grid-row: 1 / 5;
 }
 
 /* set up two social media pictures style in footer */
-img[src="images/facebook.png"]{
-   grid-column: 5/5;
-   grid-row: 2 / 4;
-   width: 35px;
-   margin-top: 20px;
+img[src="images/facebook.png"] {
+    grid-column: 5/5;
+    grid-row: 2 / 4;
+    width: 35px;
+    margin-top: 20px;
 }
 
-img[src="images/tiktok.png"]{
+img[src="images/tiktok.png"] {
     grid-column: 5/7;
     grid-row: 3/5;
     width: 30px;
-    margin-left:50px;
-    margin-top:-6px;
+    margin-left: 50px;
+    margin-top: -6px;
 }
 
-/* Desktop header: all elements go into a single row so I will use flex */
-@media screen and (min-width: 760px){
-img[src="images/logo.png"]{
-    padding-left: 20px;
-    padding:20px;
-}
+/* media quiry: all elements go into a single column so I will use flex */
+@media screen and (min-width: 1200px) {
+    nav ul {
+        display: flex;
+        background-color: white;
+        margin: 10px;
+        padding: -10px;
+        display: flex;
+        flex-direction: column;
+    }
 
-.logo{
-padding-left: 20px;
-padding:20px;
-}
+    /* nav size format adjustment */
+    nav a,
+    nav a:link,
+    nav a:visited {
+        border-style: solid;
+        border-width: 0.3px;
+    }
 
+    /* header adjustment */
+    header {
+        padding-bottom: 500px;
+        margin-bottom: -100px;
+    }
 
+    ul li {
+        font-weight: bold;
+        font-size: 28px;
+    }
 
+    ul li:nth-child(1) {
+        padding-left: 10px;
+        margin: 80px;
+        margin-top: 15px;
+        padding-left: -20px;
+        margin-left: 15px;
+    }
+
+    ul li:nth-child(2) {
+        padding-left: 10px;
+        margin: 80px;
+        padding-top: 10px;
+        margin-top: -60px;
+        margin-left: 15px;
+    }
+
+    ul li:nth-child(3) {
+        padding-left: 10px;
+        margin: 80px;
+        padding-top: 15px;
+        margin-top: -60px;
+        margin-left: 15px;
+    }
+
+    /* logo adjustment */
+    header>img {
+        padding-left: 0px;
+    }
+
+    /* img adjustment */
+
+    .mango-pic {
+        margin-top: auto;
+        margin-bottom: auto;
+        margin-right: 15px;
+    }
+
+    /* button adjustment */
+    button[class="mango"] {
+        width: 300px;
+        margin-top: auto;
+        margin-bottom: auto;
+        margin-left: 15px;
+    }
+
+    .flex-container {
+        flex-direction: row;
+    }
 }
